--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2812,8 +2812,8 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 .post-section .post-row .post-container1 .post-col1 .hashtag-wrapp .list-group li.list-group-item a { padding: 10px; display: block; color: #000; background: #FFEAC2; border-radius: 10px; word-break: break-all;}
 .post-section .post-row .post-container-wrapp {width: 40%;overflow-y: auto; max-height: calc(100vh - 105px);}
 .post-section .post-row .post-container-wrapp::-webkit-scrollbar {display: none;}
-.post-section .post-row .post-container { width: 100%; padding: 25px; background: #ffff; border-radius: 10px;}
-.post-section .post-row .post-container .post-item { padding: 0; margin: 0 0 40px; border: none;}
+.post-section .post-row .post-container { width: 100%; padding: 0; background: #ffff; border-radius: 10px; overflow: hidden;}
+.post-section .post-row .post-container .post-item { padding: 25px; margin: 0 0 40px; border: none; border-bottom: 5px solid #efefef;}
 .post-section .post-row .post-container .post-item .post-header { margin: 0 0 22px;}
 .post-section .post-row .post-container .post-item .post-header .title { flex: 1 0 0;}
 .post-section .post-row .post-container .post-item .post-header .avathar { background: #D9D9D9; margin: 0 12px 0 0; padding: 5px;}
