--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1910,9 +1910,9 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 
 .exam-container .question-bank-review { max-width: 100%; padding: 0; position: relative;min-height: inherit;}
 .exam-container .question-bank-review .lesson .lesson-body { margin: 0;}
-.exam-container .question-bank-review .lesson .lesson-body .mcq-container { width: 100%; display: flex; flex-wrap: wrap;  padding: 0 0 0;  position: relative;}
-.exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group { width: 50%; padding: 50px; height: calc(100vh - 200px); overflow-y: auto;}
-.exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group-right { width: 50%;  padding: 50px; height: calc(100vh - 200px); overflow-y: auto;}
+.exam-container .question-bank-review .lesson .lesson-body .mcq-container { width: 100%; display: flex; flex-wrap: wrap;  padding: 0 0 0;  position: relative;min-height: inherit;}
+.exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group { width: 50%; padding: 50px; height: calc(100vh - 300px); overflow-y: auto;}
+.exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group-right { width: 50%;  padding: 50px; height: calc(100vh - 300px); overflow-y: auto;}
 .exam-container .question-bank-review .lesson .lesson-body  .col-md-12 { padding: 0;}
 .exam-container .question-bank-review .lesson  .lesson-exit { position: absolute; top: 50px; left: 40px;z-index: 9;}
 .exam-container .question-bank-review .lesson .lesson-body h3 { font-size: 20px; font-weight: 500; color: #000000; margin: 0 0 20px; padding: 0 0 0 35px;}
