--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1910,6 +1910,7 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 
 .exam-container .question-bank-review { max-width: 100%; padding: 0; position: relative;min-height: inherit;}
 .exam-container .question-bank-review .lesson .lesson-body { margin: 0;}
+.exam-container .question-bank-review .lesson .lesson-body .row {margin: 0 0 0 0;}
 .exam-container .question-bank-review .lesson .lesson-body .mcq-container { width: 100%; display: flex; flex-wrap: wrap;  padding: 0 0 0;  position: relative;min-height: inherit;}
 .exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group { width: 50%; padding: 50px; height: calc(100vh - 300px); overflow-y: auto;}
 .exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group-right { width: 50%;  padding: 50px; height: calc(100vh - 300px); overflow-y: auto;}
