--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1921,7 +1921,7 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 .exam-container .question-bank-review .lesson #lesson-footer-pagination { margin: 30px 0; display: inline-block;}
 .exam-container .question-bank-review .lesson #lesson-footer-pagination button.btn { display: inline-block;}
 .exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group-right .mcq-explanation { font-size: 20px; font-weight: 600; margin: 0 0 20px;}
-.exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group h5 { font-weight: 600; font-size: 17px; margin: 0 0 16px 35px; padding: 2px 5px; border-left: 3px solid #ef9b10;}
+.exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group h5 { font-weight: 600; font-size: 17px; margin: 0 0 16px 0; padding: 2px 5px; border-left: 3px solid #ef9b10;}
 
 .exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group::-webkit-scrollbar {width: 10px;}
 .exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group::-webkit-scrollbar-track { background: #f1f1f1; border-radius: 8px;}
