--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2984,6 +2984,11 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 
 
 nav.navbar.header-class { display: none;}
+.exam-container.answerclass {padding-top: 0; margin-top: 0;}
+.exam-container.answerclass .exam-progress { top: 0;}
+.exam-container.answerclass .mcq-container-wrap .lesson .lesson-body .mcq-container .mcq-group { height: calc(100vh - 160px);}
+.exam-container.answerclass .mcq-container-wrap .lesson .lesson-body .mcq-container .mcq-answer { height: calc(100vh - 160px);}
+
 
 
 @media screen and (max-width:1500px) {
