--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2994,6 +2994,17 @@ nav.navbar.header-class { display: none;}
 .exam-container.answerclass .mcq-container-wrap.question-bank-review .lesson .lesson-body .mcq-container .mcq-answer { height: calc(100vh - 245px);}
 
 
+
+.modal-expand.modal-expand-result .container-wrap { background: none; padding: 0;}
+.modal-expand.modal-expand-result .container-wrap .question-preview-body .col-md-3 { background: #fff; padding: 30px; border-radius: 10px;}
+.modal-expand.modal-expand-result .container-wrap .question-preview-body .col-md-3 .card-body { padding: 0; border: none;}
+.modal-expand.modal-expand-result .container-wrap .question-preview-body .col-md-3 .card-body .exam-mark-body { text-align: left;}
+.modal-expand.modal-expand-result .container-wrap .question-preview-body .col-md-3 .card-body .exam-mark-body .mark-label {  padding: 20px 20px 15px;  border: 1px solid #DFDFDF; border-radius: 10px;}
+.modal-expand.modal-expand-result .container-wrap .question-preview-body .col-md-3 .card-body .exam-mark-body .mark-label span { display: block; color: #978E8E;}
+.modal-expand.modal-expand-result .container-wrap .question-preview-body .col-md-3 .card-body .exam-mark-body .mark-label span:first-child { color: #000000;}
+
+
+
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
 
