--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2800,7 +2800,7 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 
 
 .post-section .post-row {width: 100%;display: flex; flex-wrap: wrap; margin: 0 0 0;}
-.post-section .post-row .post-container1 {width: 28%; margin: 0 2% 0 0; overflow-y: auto; max-height: calc(100vh - 105px);}
+.post-section .post-row .post-container1 {width: 28%; margin: 0 2% 0 0; overflow-y: auto; max-height: calc(100vh - 105px); max-width: 350px;}
 .post-section .post-row .post-container1::-webkit-scrollbar {display: none;}
 .post-section .post-row .post-container1 .post-col1 {width: 100%; background: #fff; padding: 25px; border-radius: 10px;}
 .post-section .post-row .post-container1 .row {margin: 0;}
@@ -2810,7 +2810,7 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 .post-section .post-row .post-container1 .post-col1 .hashtag-wrapp .list-group { width: 100%;}
 .post-section .post-row .post-container1 .post-col1 .hashtag-wrapp .list-group li.list-group-item { border: none; padding: 0; margin: 0 0 15px;}
 .post-section .post-row .post-container1 .post-col1 .hashtag-wrapp .list-group li.list-group-item a { padding: 10px; display: block; color: #000; background: #FFEAC2; border-radius: 10px; word-break: break-all;}
-.post-section .post-row .post-container-wrapp {width: 40%;overflow-y: auto; max-height: calc(100vh - 105px);}
+.post-section .post-row .post-container-wrapp {width: 40%;overflow-y: auto; max-height: calc(100vh - 105px); flex: 1 0 0;}
 .post-section .post-row .post-container-wrapp::-webkit-scrollbar {display: none;}
 .post-section .post-row .post-container { width: 100%; padding: 0; background: none; border-radius: 10px; overflow: hidden;}
 .post-section .post-row .post-container .post-item { padding: 10px 25px 5px; margin: 0 0 15px; border: none; border-radius: 10px;}
@@ -3088,7 +3088,7 @@ nav.navbar.header-class { display: none;}
 .sidebar-menu .line { width: 100%; position: relative; display: inline-block; height: 2px; background: #1989f8; transition: all .25s ease-in-out;}
 .sidebar-menu .line:before { content: ""; width: 100%; position: absolute; display: inline-block; height: 2px; background: #1989f8; top: -10px; transition: all .25s ease-in-out;}
 .sidebar-menu .line:after { content: ""; width: 100%; position: absolute; display: inline-block; height: 2px; background: #1989f8; top: 10px; transition: all .25s ease-in-out;}
-nav.navbar { padding: 10px 6%;}
+nav.navbar { padding: 10px 6% 10px 55px;}
 .side_bar.show { margin-left: 0;}
 .sidebar-menu .active .line { background: transparent;}
 .sidebar-menu .active .line:before { top: 0; transform: rotate(-45deg);}
