--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -3103,6 +3103,7 @@ aside.side_bar.slider-btn { width: 220px !important;}
 .card-progress .card-body .session-chart .donut-inner { font-size: 14px;}
 .card-progress .card-body .session-text { font-size: 12px;}
 .card-progress .card-body .col-md-3 { padding: 0 8px;}
+.card-graph .overview-graph-footer .graph-filter .graph-filter-btn { font-size: 15px;}
 
 }
 
