--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -3257,7 +3257,7 @@ nav.navbar { padding: 10px 6% 10px 55px;}
 .card-calendar .card-body .calendar .calendar-body .fc-header-toolbar button.fc-button { padding: 5px;}
 .card-calendar .card-body .calendar .calendar-body .fc-header-toolbar button.fc-button .fc-icon { width: 20px; height: 20px; font-size: 16px;}
 .card-calendar .card-body .calendar .calendar-body .fc-header-toolbar .fc-toolbar-chunk h2 { font-size: 14px;}
-.card-calendar .card-body .calendar .calendar-body .fc-view-harness { max-height: 52vw;}
+.card-calendar .card-body .calendar .calendar-body .fc-view-harness { max-height: inherit;  height: 100vw !important;}
 .card-progress .card-body .col-md-3 { width: 50%;  margin: 0 0 20px;}
 
 }
