--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -3207,6 +3207,9 @@ nav.navbar { padding: 10px 6% 10px 55px;}
 .card-calendar .card-body .calendar .calendar-body .fc-view-harness { max-height: 35vw;}
 .card-calendar .card-body .calendar .calendar-body .fc-view-harness .fc-multiMonthFourMonth-view .fc-multimonth-month table { height: auto  !important;}
 
+.category .category-image { width: 50px;}
+.learn-section .col-md-6 .card .card-body { padding: 20px;}
+
 }
 
 @media screen and (max-width:600px){
