--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -284,7 +284,7 @@ main{ margin-top:87px;}
 }
 
 .learn-section .row { justify-content: space-between;}
-.learn-section .col-md-6{margin: 0 0 26px; padding: 0 0 0; width: 49%;}
+.learn-section .col-md-6{margin: 0 0 20px; padding: 0 0 0; width: 49%;}
 .learn-section .col-md-6 .card {border-radius: 5px; border: none;}
 .category .progress-area {width: 100%; margin: 10px 0 0;display: flex; flex-wrap: wrap;  align-items: center;}
 .learn-section .col-md-6 .card .card-body { padding: 30px;}
@@ -3218,6 +3218,8 @@ nav.navbar { padding: 10px 6% 10px 55px;}
 .private-wrap .private-content .card .card-body .row .col-md-12 {width: 100%;}
 
 .payment-wrap .nav.nav-tabs li.nav-item .nav-link {font-size: 13px;}
+
+.learn-section .col-md-6 { width: 100%;}
 
 }
 
