--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -3225,6 +3225,8 @@ nav.navbar { padding: 10px 6% 10px 55px;}
 
 .learn-section .col-md-6 { width: 100%;}
 
+.lesson .lesson-body .col-md-6 { width: 100%;}
+
 }
 
 
