--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -3074,6 +3074,15 @@ nav.navbar.header-class { display: none;}
 .private-wrap .private-content .card .card-body .row .col-md-12 {
   width: 50%;
 }
+
+.progress-menu { padding: 15px 40px;}
+.progress-menu .menu-text { font-size: 26px;}
+.progress-menu .menu-text #menu-text span { font-size: 32px;}
+.progress-main .timer span { font-size: 16px;}
+.exam-progress>.exam-progress-inner {  padding: 20px 15px;}
+.progress-main .hide-btn { width: 50px; height: 50px; padding: 10px; font-size: 11px;}
+
+
 }
 
 @media screen and (max-width:1199px) {
