--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -3271,6 +3271,7 @@ nav.navbar { padding: 10px 6% 10px 55px;}
 .exam-container.answerclass .mcq-container-wrap .lesson .lesson-body .mcq-container .mcq-group {   height: calc(100vh - 150px);}
 .exam-progress>.exam-progress-inner>.exam-center { margin: 0 0 0 auto;}
 .progress-menu { margin: 0 0 0;}
+.exam-container .container-wrap {padding: 0;}
 
 }
 
