--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -3287,7 +3287,7 @@ nav.navbar { padding: 10px 6% 10px 55px;}
 .lesson .lesson-body .col-md-6 { width: 100%;}
 
 .exam-container.answerclass .mcq-container-wrap .lesson .lesson-body .mcq-container .mcq-group {height: inherit; width: 100%; padding: 0 0 0; border-bottom: 1px solid #1789fa; margin: 0 0 20px;}
-.exam-container.answerclass .mcq-container-wrap .lesson .lesson-body .mcq-container .mcq-answer { width: 100%; padding: 0 0 0;}
+.exam-container.answerclass .mcq-container-wrap .lesson .lesson-body .mcq-container .mcq-answer { width: 100%; padding: 0 0 0; height: inherit;}
 .exam-container.answerclass .mcq-container-wrap { padding: 20px;}
 .exam-container .mcq-container-wrap .lesson .lesson-body .mcq-container:after {display: none;}
 .exam-container .container-wrap .lesson .lesson-body .mcq-container .form-group .form-check { font-size: 16px; padding-left: 30px;}
@@ -3346,5 +3346,20 @@ nav.navbar { padding: 10px 6% 10px 55px;}
 .card-progress .card-body .col-md-3 { width: 50%;  margin: 0 0 20px;}
 .card-calendar .card-body .calendar .calendar-body .fc-view-harness .fc-multiMonthFourMonth-view .fc-multimonth-month {width: 100% !important; padding: 0 0 0 !important;}
 .card-calendar .card-body .calendar .calendar-footer .calendar-color-list .calendar-color-item { width: 100%; margin: 0 0 10px;}
+
+.progress-main { min-width: inherit; transform: scale(0.8);  left: -15px; position: relative;}
+.lesson-pagination .button { width: 90px; font-size: 12px;}
+.lesson-pagination .exam-right.exam-progress-inner-item .progress-main .bookmark { width: 100px;}
+.lesson-pagination .exam-right.exam-progress-inner-item .progress-main .bookmark .flagclass { font-size: 12px;}
+.lesson-pagination .left-btn img { width: 9px; left: 13px;}
+.lesson-pagination .right-btn img { width: 9px; right: 13px;}
+.lesson-pagination .exam-right.exam-progress-inner-item .progress-main .bookmark #flagimages { width: 20px; right: 0;}
+.lesson-pagination .exam-right.exam-progress-inner-item { margin: 0 10px 0 auto;}
+.progress-menu .menu-text { font-size: 12px;}
+.progress-menu .menu-text #menu-text span { font-size: 15px; margin: 0 5px;}
+.progress-menu .menu-icon { width: 20px;}
+.progress-menu { padding: 10px;}
+.exam-progress>.exam-progress-inner { padding: 10px;}
+.lesson-pagination .exam-right.exam-progress-inner-item .progress-main .bookmark a { width: 100%;}
 
 }
