--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -3089,6 +3089,9 @@ nav.navbar.header-class { display: none;}
 .exam-progress>.exam-progress-inner {  padding: 20px 15px;}
 .progress-main .hide-btn { width: 50px; height: 50px; padding: 10px; font-size: 11px;}
 
+.exam-container.answerclass .mcq-container-wrap .lesson .lesson-body .mcq-container .mcq-answer {  height: calc(100vh - 160px);}
+.exam-container.answerclass .mcq-container-wrap .lesson .lesson-body .mcq-container .mcq-group { height: calc(100vh - 160px);}
+
 
 }
 
