--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2793,7 +2793,7 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 .timetable-wrapp .timetable-row {width: 100%;display: flex;flex-wrap: wrap;align-items: center;padding: 15px; border: 1px solid #BCBCBC; border-radius: 5px; margin: 0 0 22px; justify-content: space-between;}
 .timetable-wrapp .timetable-row p { line-height: normal; margin: 0 0 0;}
 .timetable-wrapp .timetable-row .user-icons {width: auto;}
-.timetable-wrapp .timetable-row .user-icons .user-icon { display: inline-block; width: 20px; margin: 0 0 0 8px;}
+.timetable-wrapp .timetable-row .user-icons .user-icon { display: inline-block; width: 20px; margin: 0 8px 0 0;}
 
 
 .live-modal .modal-dialog {max-width: 90% !important;}
@@ -3334,7 +3334,7 @@ nav.navbar { padding: 10px 6% 10px 55px;}
 
 
 .timetable-wrapp .timetable-row .user-icons { width: 100%; margin: 10px 0 0;}
-.timetable-wrapp .timetable-row .user-icons .user-icon:first-child { margin-left: 0;}
+.timetable-wrapp .timetable-row .user-icons .user-icon:last-child { margin-right: 0;}
 .workshop-wrap .workshop-content p { font-size: 16px;}
 .timetable-wrapp p { font-size: 16px;}
 .workshop-wrap .col-md-12 { padding: 0;}
