--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -3441,4 +3441,6 @@ nav.navbar { padding: 10px 6% 10px 55px;}
 .live-class-section {padding: 20px;}
 .live-class-section .card .card-body { padding: 20px;}
 
+.timetable-wrapp .timetable-row .user-icons .user-icon { margin: 5px;}
+
 }
