--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -3339,6 +3339,7 @@ nav.navbar { padding: 10px 6% 10px 55px;}
 .timetable-wrapp p { font-size: 16px;}
 .workshop-wrap .col-md-12 { padding: 0;}
 
+.workshop-wrap .workshop-content ul li { font-size: 16px;}
 
 }
 
